--- a/config
+++ b/config
@@ -57,7 +57,7 @@ COMPAT=compat-5.1r5
 DEFCOMPAT=-DCOMPAT_H
 
 # Current Version of LuaSNMP
-VERSION=1.0.6
+VERSION=1.0.6-1
 
 # Targets
 LUASNMP_SO=snmp.$(EXT).$(VERSION)
