fixed daemon configs; fixed snmp inform send; fixed ip address handling

--- a/etc/snmpd.conf
+++ b/etc/snmpd.conf
@@ -57,10 +57,10 @@
 # (local and mynetwork, depending on where the request is coming
 # from):
 
-#       sec.name  source	community
-com2sec paranoid  default	world
-com2sec readonly  default       public
-com2sec readwrite default       private
+#       sec.name  source          community
+com2sec paranoid  default         world
+com2sec readonly  default         public
+com2sec readwrite default         private
 
 ####
 # Second, map the security names into group names:
@@ -81,8 +81,8 @@ group MyRWGroup usm        readwrite
 
 #           incl/excl subtree                          mask
 view all    included  .1                               80
-view system included  .iso.org.dod.internet.mgmt.mib-2.system
-view tcp    included  .iso.org.dod.internet.mgmt.mib-2.tcp
+view system included  .1.3.6.1.2.1.1
+#view system included  .iso.org.dod.internet.mgmt.mib-2.system
 
 ####
 # Finally, grant the 2 groups access to the 1 view with different
@@ -101,6 +101,7 @@ access MyRWGroup ""      any       noauth    exact  all    all    none
 createUser leuwer MD5 leuwer2006 DES leuwer2006
 createUser ronja MD5 ronja2006 DES ronja2006
 
+
 ###############################################################################
 # System contact information
 #
@@ -112,8 +113,8 @@ createUser ronja MD5 ronja2006 DES ronja2006
 # value of an object whose value is given here will fail with an error
 # status of notWritable.
 
-# syslocation Unknown (configure /etc/snmp/snmpd.local.conf)
-# syscontact Root <root@localhost> (configure /etc/snmp/snmpd.local.conf)
+#syslocation Unknown (configure /etc/snmp/snmpd.local.conf)
+#syscontact Root <root@localhost> (configure /etc/snmp/snmpd.local.conf)
 
 # Example output of snmpwalk:
 #   % snmpwalk -v 1 -c public localhost system
@@ -404,21 +405,12 @@ createUser ronja MD5 ronja2006 DES ronja2006
 
 # The agent can support subagents using a number of extension mechanisms.
 # From the 4.2.1 release, AgentX support is being compiled in by default.
-# However, this is still experimental code, so should not be used on
-# critical production systems.
+# To use this mechanism, simply uncomment the following directive.
+#
+#  master  agentx
+#
 #   Please see the file README.agentx for more details.
 #
-# If having read, marked, learnt and inwardly digested this information,
-# you decide that you do wish to make use of this mechanism, simply
-# uncomment the following directive.
-#
-# master  agentx
-#
-# I repeat - this is *NOT* regarded as suitable for front-line production
-# systems, though it is probably stable enough for day-to-day use.
-# Probably.
-#
-# No refunds will be given.
 
 
 ###############################################################################
@@ -427,4 +419,3 @@ createUser ronja MD5 ronja2006 DES ronja2006
 #  See the snmpd.conf manual page, and the output of "snmpd -H".
 #  MUCH more can be done with the snmpd.conf than is shown as an
 #  example here.
-
