adopted to NET-SNMP 5.7.2 and Lua 5.2

--- a/etc/snmp.conf
+++ b/etc/snmp.conf
@@ -9,10 +9,10 @@ defVersion 2c
 doDebugging 0
 
 # Persistency - set in user's snmp.conf
-persistentDir /home/leuwer/.snmp
+#persistentDir /home/leuwer/.snmp
 
 # Path to MIBs
-mibdirs /home/leuwer/mibs:/usr/share/mibs/ietf:/usr/share/snmp/mibs
+mibdirs /home/leuwer/mibs:/usr/share/mibs/ietf:/usr/share/mib/iana:/usr/share/snmp/mibs
 
 # SNMPv1 and SNMPv2 authentication
 defCommunity private
