--- a/config
+++ b/config
@@ -5,7 +5,7 @@ SYSTEM = $(shell uname -o)
 MODULE=luasnmp
 
 # Lua Version to use:
-LV = 5.1
+LV = 5.2
 
 # Debugging 1 or 0
 DEBUG = 0
@@ -53,25 +53,24 @@ else
 endif
 
 # Compat-5.1 location
-COMPAT=compat-5.1r5
-DEFCOMPAT=-DCOMPAT_H
-
+#DEFCOMPAT=-DLUA_COMPAT_ALL
+DEFCOMPAT=
 # Current Version of LuaSNMP
-VERSION=1.0.6-2
+VERSION=1.0.7
 
 # Targets
 LUASNMP_SO=snmp.$(EXT).$(VERSION)
 
 # Compiler and Linker
-DEF = -DCMU_COMPATIBLE -DUSE_SNMPTRAPD $(DEFCOMPAT) -DVERSION='"$(VERSION)"' -DSYSTEM='"$(SYSTEM)"'
+DEF = -DUSE_SNMPTRAPD $(DEFCOMPAT) -DVERSION='"$(VERSION)"' -DSYSTEM='"$(SYSTEM)"'
 NETSNMP_DEF =
 CC = gcc
 ifeq ($(DEBUG), 1)
-  CFLAGS = -I$(LUAINC) -I$(COMPAT)  $(DEF) $(NETSNMP_DEF)  -Wall -ggdb -fPIC
+  CFLAGS = $(DEF) $(shell net-snmp-config --cflags) -I$(LUAINC) -fPIC -Wall -ggdb
 else
-  CFLAGS = $(shell net-snmp-config --cflags) -I$(LUAINC) -I$(COMPAT) $(DEF) -Wall -O2 -fPIC
+  CFLAGS = $(DEF) $(shell net-snmp-config --cflags) -I$(LUAINC) -fPIC -Wall -O2
 endif
-LDFLAGS = $(shell net-snmp-config --ldflags) -O -shared -fpic
+LDFLAGS = $(shell net-snmp-config --ldflags) -O -shared -fPIC
 LIBS += $(shell net-snmp-config --libs) -lcrypto
 LD = gcc
 
