--- a/config
+++ b/config
@@ -79,7 +79,7 @@ PLATFORM=-D$(SYSTEM)
 #DEFCOMPAT=-DLUA_COMPAT_ALL
 DEFCOMPAT=
 # Current Version of LuaSNMP
-VERSION=1.1.0
+VERSION=1.1.0-1
 
 # Targets
 LUASNMP_SO=snmp.$(EXT).$(VERSION)
